# pocketbase

./: .flake8  .gitignore  LICENCE.txt  README.md  coverage.sh  pyproject.toml  requirements.txt
.github/workflows/: python-3.10.yml  python-3.7.yml  python-3.8.yml  python-3.9.yml  python-publish.yml  python-versions.yml  tests.yml
pocketbase/: __init__.py  __version__.py  client.py  errors.py  utils.py
pocketbase/models/: __init__.py  admin.py  backups.py  collection.py  external_auth.py  file_upload.py  log_request.py  record.py  user.py
pocketbase/models/utils/: __init__.py  base_model.py  collection_field.py  list_result.py  schema_field.py
pocketbase/services/: __init__.py  admin_service.py  admins.py  backups_service.py  collection_service.py  collections.py  files_service.py  health_service.py  log_service.py  logs.py  realtime.py  realtime_service.py  record_service.py  records.py  settings.py  settings_service.py  users.py
pocketbase/services/utils/: __init__.py  base_crud_service.py  base_service.py  crud_service.py  sse.py  sub_crud_service.py
pocketbase/stores/: __init__.py  base_auth_store.py  local_auth_store.py
tests/: connection.py  pocketbase.sh  test_admin.py  test_client.py  test_client_snake_case.py  test_collection.py  test_local_auth_store.py  test_log_service.py  test_pocketbase.py  test_python_pocketbase.py  test_record.py  test_record_auth.py  test_record_event.py  test_settings.py  test_user.py  test_utils.py
tests/integration/: conftest.py  coverage.sh  pocketbase  pocketbase_su  sendmail  test_admin.py  test_backups.py  test_collection.py  test_files.py  test_health.py  test_local_auth_store.py  test_log_service.py  test_record.py  test_record_auth.py  test_record_event.py  test_settings.py
