[project]
name = "pocketbase"
description = "PocketBase SDK for python."
requires-python = ">=3.7"
license = "MIT"
authors = [{ name = "Vithor Jaeger", email = "vaphes@gmail.com" }, { name = "Max Amling", email = "max-amling@web.de" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]
keywords = ["pocketbase", "sdk"]
dependencies = ["httpx>=0.23.0"]
dynamic = ["readme", "version"]

[project.urls]
"Homepage" = "https://github.com/vaphes/pocketbase"
"Source" = "https://github.com/vaphes/pocketbase"
"Bug Tracker" = "https://github.com/vaphes/pocketbase/issues"

[tool.poetry]
name = "pocketbase"
version = "0.11.1"
description = "PocketBase SDK for python."
authors = ["Vithor Jaeger <vaphes@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/vaphes/pocketbase"
repository = "https://github.com/vaphes/pocketbase"
keywords = ["pocketbase", "sdk"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/vaphes/pocketbase/issues"

[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.24.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"
pytest-httpx = "^0.22.0"
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
