[tool.poetry]
name = "pocketbase"
version = "0.12.3"
description = "PocketBase SDK for python."
authors = ["Vithor Jaeger <vaphes@gmail.com>", "Max Amling <max-amling@web.de>"]
readme = "README.md"
license = "MIT"
keywords = ["pocketbase", "sdk"]
homepage = "https://github.com/vaphes/pocketbase"
repository = "https://github.com/vaphes/pocketbase"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = ">=3.9"
httpx = ">=0.27.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-httpx = "^0.30.0"
ruff = "^0.6.5"
coveralls = { version = "^4.0.1", python = "<3.13" }

[tool.ruff]
line-length = 120
target-version = "py39"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
